@@ -14,19 +14,13 @@ import com.intellij.codeInsight.lookup.impl.LookupImpl;
 import com.intellij.featureStatistics.FeatureUsageTracker;
 import com.intellij.ide.DataManager;
 import com.intellij.lang.Language;
-import com.intellij.openapi.actionSystem.ActionManager;
-import com.intellij.openapi.actionSystem.AnAction;
-import com.intellij.openapi.actionSystem.DataContext;
-import com.intellij.openapi.actionSystem.OverridingAction;
+import com.intellij.openapi.actionSystem.*;
 import com.intellij.openapi.actionSystem.impl.ActionManagerImpl;
 import com.intellij.openapi.application.*;
 import com.intellij.openapi.application.ex.ApplicationManagerEx;
 import com.intellij.openapi.command.CommandProcessor;
 import com.intellij.openapi.diagnostic.Logger;
-import com.intellij.openapi.editor.Caret;
-import com.intellij.openapi.editor.Document;
-import com.intellij.openapi.editor.Editor;
-import com.intellij.openapi.editor.EditorModificationUtil;
+import com.intellij.openapi.editor.*;
 import com.intellij.openapi.editor.actionSystem.EditorActionManager;
 import com.intellij.openapi.editor.actionSystem.TypedAction;
 import com.intellij.openapi.editor.ex.DocumentEx;
@@ -86,19 +80,22 @@ public class CodeCompletionHandlerBase {
 
   private final Tracer completionTracer = TelemetryManager.getInstance().getTracer(CodeCompletion);
 
-  public static CodeCompletionHandlerBase createHandler(@NotNull CompletionType completionType) {
+  public static @NotNull CodeCompletionHandlerBase createHandler(@NotNull CompletionType completionType) {
     return createHandler(completionType, true, false, true);
   }
 
-  public static CodeCompletionHandlerBase createHandler(@NotNull CompletionType completionType, boolean invokedExplicitly, boolean autopopup, boolean synchronous) {
-    return createHandler(completionType, invokedExplicitly, autopopup, synchronous, "CodeCompletion");
+  public static @NotNull CodeCompletionHandlerBase createHandler(@NotNull CompletionType completionType,
+                                                                 boolean invokedExplicitly,
+                                                                 boolean autopopup,
+                                                                 boolean synchronous) {
+    return createHandler(completionType, invokedExplicitly, autopopup, synchronous, IdeActions.ACTION_CODE_COMPLETION);
   }
 
-  public static CodeCompletionHandlerBase createHandler(@NotNull CompletionType completionType,
-                                                        boolean invokedExplicitly,
-                                                        boolean autopopup,
-                                                        boolean synchronous,
-                                                        String actionId) {
+  public static @NotNull CodeCompletionHandlerBase createHandler(@NotNull CompletionType completionType,
+                                                                 boolean invokedExplicitly,
+                                                                 boolean autopopup,
+                                                                 boolean synchronous,
+                                                                 @NotNull String actionId) {
     AnAction codeCompletionAction = ActionManager.getInstance().getAction(actionId);
     if (codeCompletionAction instanceof OverridingAction) {
       codeCompletionAction = ((ActionManagerImpl)ActionManager.getInstance()).getBaseAction((OverridingAction)codeCompletionAction);
@@ -112,7 +109,10 @@ public class CodeCompletionHandlerBase {
     this(completionType, true, false, true);
   }
 
-  public CodeCompletionHandlerBase(@NotNull CompletionType completionType, boolean invokedExplicitly, boolean autopopup, boolean synchronous) {
+  public CodeCompletionHandlerBase(@NotNull CompletionType completionType,
+                                   boolean invokedExplicitly,
+                                   boolean autopopup,
+                                   boolean synchronous) {
     this.completionType = completionType;
     this.invokedExplicitly = invokedExplicitly;
     this.autopopup = autopopup;
@@ -124,12 +124,16 @@ public class CodeCompletionHandlerBase {
   }
 
   public void handleCompletionElementSelected(@NotNull LookupElement item,
-                                              char completionChar, OffsetMap offsetMap, OffsetsInFile hostOffsets, Editor editor, Integer initialOffset) {
+                                              char completionChar,
+                                              @NotNull OffsetMap offsetMap,
+                                              @NotNull OffsetsInFile hostOffsets,
+                                              @NotNull Editor editor,
+                                              int initialOffset) {
     WatchingInsertionContext context = null;
     try {
       StatisticsUpdate update = StatisticsUpdate.collectStatisticChanges(item);
       //todo pass all relevant items
-      context = insertItemHonorBlockSelection(new ArrayList<>(),item, completionChar, offsetMap, hostOffsets, editor, initialOffset, update);
+      context = insertItemHonorBlockSelection(new ArrayList<>(), item, completionChar, offsetMap, hostOffsets, editor, initialOffset);
       update.trackStatistics(context);
     }
     finally {
@@ -139,11 +143,11 @@ public class CodeCompletionHandlerBase {
     }
   }
 
-  public final void invokeCompletion(final Project project, final Editor editor) {
+  public final void invokeCompletion(@NotNull Project project, @NotNull Editor editor) {
     invokeCompletion(project, editor, 1);
   }
 
-  public final void invokeCompletion(final @NotNull Project project, final @NotNull Editor editor, int time) {
+  public final void invokeCompletion(@NotNull Project project, @NotNull Editor editor, int time) {
     invokeCompletion(project, editor, time, false);
   }
 
@@ -154,58 +158,58 @@ public class CodeCompletionHandlerBase {
 
   @ApiStatus.Internal
   protected void invokeCompletion(@NotNull Project project, @NotNull Editor editor, int time, boolean hasModifiers, @NotNull Caret caret) {
-      markCaretAsProcessed(caret);
+    markCaretAsProcessed(caret);
 
-      if (invokedExplicitly) {
-        StatisticsUpdate.applyLastCompletionStatisticsUpdate();
+    if (invokedExplicitly) {
+      StatisticsUpdate.applyLastCompletionStatisticsUpdate();
+    }
+
+    checkNoWriteAccess();
+
+    CompletionAssertions.checkEditorValid(editor);
+
+    int offset = editor.getCaretModel().getOffset();
+    if (editor.isViewer() || editor.getDocument().getRangeGuard(offset, offset) != null) {
+      editor.getDocument().fireReadOnlyModificationAttempt();
+      EditorModificationUtil.checkModificationAllowed(editor);
+      return;
+    }
+
+    if (!FileDocumentManager.getInstance().requestWriting(editor.getDocument(), project)) {
+      return;
+    }
+    CompletionPhase phase = CompletionServiceImpl.getCompletionPhase();
+    boolean repeated = phase.indicator != null && phase.indicator.isRepeatedInvocation(completionType, editor);
+
+    int newTime = phase.newCompletionStarted(time, repeated);
+    if (invokedExplicitly) {
+      time = newTime;
+    }
+    int invocationCount = time;
+    if (CompletionServiceImpl.isPhase(CompletionPhase.InsertedSingleItem.class)) {
+      CompletionServiceImpl.setCompletionPhase(CompletionPhase.NoCompletion);
+    }
+    CompletionServiceImpl.assertPhase(CompletionPhase.NoCompletion.getClass(), CompletionPhase.CommittingDocuments.class);
+
+    if (invocationCount > 1 && completionType == CompletionType.BASIC) {
+      FeatureUsageTracker.getInstance().triggerFeatureUsed(CodeCompletionFeatures.SECOND_BASIC_COMPLETION);
+    }
+
+    long startingTime = System.currentTimeMillis();
+    Runnable initCmd = () -> {
+      WriteAction.run(() -> EditorUtil.fillVirtualSpaceUntilCaret(editor));
+      CompletionInitializationContextImpl context = withTimeout(calcSyncTimeOut(startingTime), () -> {
+        return CompletionInitializationUtil.createCompletionInitializationContext(project, editor, caret, invocationCount, completionType);
+      });
+
+      boolean hasValidContext = context != null;
+      if (!hasValidContext) {
+        PsiFile psiFile = PsiUtilBase.getPsiFileInEditor(caret, project);
+        context = new CompletionInitializationContextImpl(editor, caret, psiFile, completionType, invocationCount);
       }
 
-      checkNoWriteAccess();
-
-      CompletionAssertions.checkEditorValid(editor);
-
-      int offset = editor.getCaretModel().getOffset();
-      if (editor.isViewer() || editor.getDocument().getRangeGuard(offset, offset) != null) {
-        editor.getDocument().fireReadOnlyModificationAttempt();
-        EditorModificationUtil.checkModificationAllowed(editor);
-        return;
-      }
-
-      if (!FileDocumentManager.getInstance().requestWriting(editor.getDocument(), project)) {
-        return;
-      }
-      CompletionPhase phase = CompletionServiceImpl.getCompletionPhase();
-      boolean repeated = phase.indicator != null && phase.indicator.isRepeatedInvocation(completionType, editor);
-
-      final int newTime = phase.newCompletionStarted(time, repeated);
-      if (invokedExplicitly) {
-        time = newTime;
-      }
-      final int invocationCount = time;
-      if (CompletionServiceImpl.isPhase(CompletionPhase.InsertedSingleItem.class)) {
-        CompletionServiceImpl.setCompletionPhase(CompletionPhase.NoCompletion);
-      }
-      CompletionServiceImpl.assertPhase(CompletionPhase.NoCompletion.getClass(), CompletionPhase.CommittingDocuments.class);
-
-      if (invocationCount > 1 && completionType == CompletionType.BASIC) {
-        FeatureUsageTracker.getInstance().triggerFeatureUsed(CodeCompletionFeatures.SECOND_BASIC_COMPLETION);
-      }
-
-      long startingTime = System.currentTimeMillis();
-      Runnable initCmd = () -> {
-        WriteAction.run(() -> EditorUtil.fillVirtualSpaceUntilCaret(editor));
-        CompletionInitializationContextImpl context = withTimeout(calcSyncTimeOut(startingTime), () -> {
-          return CompletionInitializationUtil.createCompletionInitializationContext(project, editor, caret, invocationCount, completionType);
-        });
-
-        boolean hasValidContext = context != null;
-        if (!hasValidContext) {
-          PsiFile psiFile = PsiUtilBase.getPsiFileInEditor(caret, project);
-          context = new CompletionInitializationContextImpl(editor, caret, psiFile, completionType, invocationCount);
-        }
-
-        doComplete(context, hasModifiers, hasValidContext, startingTime);
-      };
+      doComplete(context, hasModifiers, hasValidContext, startingTime);
+    };
     try {
       if (autopopup) {
         CommandProcessor.getInstance().runUndoTransparentAction(initCmd);
@@ -216,8 +220,10 @@ public class CodeCompletionHandlerBase {
     }
     catch (IndexNotReadyException e) {
       if (invokedExplicitly) {
-        DumbService.getInstance(project).showDumbModeNotificationForFunctionality(CodeInsightBundle.message("completion.not.available.during.indexing"),
-                                                                                  DumbModeBlockedFunctionality.CodeCompletion);
+        DumbService.getInstance(project).showDumbModeNotificationForFunctionality(
+          CodeInsightBundle.message("completion.not.available.during.indexing"),
+          DumbModeBlockedFunctionality.CodeCompletion
+        );
       }
       throw e;
     }
@@ -246,7 +252,7 @@ public class CodeCompletionHandlerBase {
     }
   }
 
-  private @NotNull LookupImpl obtainLookup(Editor editor, Project project) {
+  private @NotNull LookupImpl obtainLookup(@NotNull Editor editor, @NotNull Project project) {
     CompletionAssertions.checkEditorValid(editor);
     LookupImpl existing = (LookupImpl)LookupManager.getActiveLookup(editor);
     if (existing != null && existing.isCompletion()) {
@@ -268,7 +274,10 @@ public class CodeCompletionHandlerBase {
   }
 
   @ApiStatus.Internal
-  protected void doComplete(CompletionInitializationContextImpl initContext, boolean hasModifiers, boolean isValidContext, long startingTime) {
+  protected void doComplete(@NotNull CompletionInitializationContextImpl initContext,
+                            boolean hasModifiers,
+                            boolean isValidContext,
+                            long startingTime) {
     Editor editor = initContext.getEditor();
     CompletionAssertions.checkEditorValid(editor);
 
@@ -305,8 +314,8 @@ public class CodeCompletionHandlerBase {
     scheduleContributorsAfterAsyncCommit(initContext, indicator, hasModifiers);
   }
 
-  private void scheduleContributorsAfterAsyncCommit(CompletionInitializationContextImpl initContext,
-                                                    CompletionProgressIndicator indicator,
+  private void scheduleContributorsAfterAsyncCommit(@NotNull CompletionInitializationContextImpl initContext,
+                                                    @NotNull CompletionProgressIndicator indicator,
                                                     boolean hasModifiers) {
     CompletionPhase phase;
     if (synchronous) {
@@ -314,7 +323,7 @@ public class CodeCompletionHandlerBase {
       indicator.showLookup();
     }
     else {
-      phase = new CompletionPhase.CommittingDocuments(indicator, InjectedLanguageEditorUtil.getTopLevelEditor(indicator.getEditor()), null);
+      phase = CompletionPhase.CommittingDocuments.create(InjectedLanguageEditorUtil.getTopLevelEditor(indicator.getEditor()), indicator);
     }
     CompletionServiceImpl.setCompletionPhase(phase);
 
@@ -334,10 +343,17 @@ public class CodeCompletionHandlerBase {
       .submit(AppExecutorUtil.getAppExecutorService());
   }
 
-  private void trySynchronousCompletion(CompletionInitializationContextImpl initContext,
+  /**
+   * Tries to perform completion synchronously:
+   * 1. It starts inferencing candidates (synchornously or asynchronously)
+   * 2. It waits for them to be computed for the given timeout.
+   * 3. If candidates are computed until timeout, the UI is updated immediately, otherwise computation continues and the phase is set to BgCalculation.
+   */
+  private void trySynchronousCompletion(@NotNull CompletionInitializationContextImpl initContext,
                                         boolean hasModifiers,
                                         long startingTime,
-                                        CompletionProgressIndicator indicator, OffsetsInFile hostCopyOffsets) {
+                                        @NotNull CompletionProgressIndicator indicator,
+                                        @NotNull OffsetsInFile hostCopyOffsets) {
     CompletionServiceImpl.setCompletionPhase(new CompletionPhase.Synchronous(indicator));
 
     var future = startContributorThread(initContext, indicator, hostCopyOffsets, hasModifiers);
@@ -348,6 +364,7 @@ public class CodeCompletionHandlerBase {
     int timeout = calcSyncTimeOut(startingTime);
     if (indicator.blockingWaitForFinish(timeout)) {
       if (ApplicationManager.getApplication().isUnitTestMode()) {
+        //noinspection TestOnlyProblems
         checkForExceptions(future);
       }
       try {
@@ -366,9 +383,9 @@ public class CodeCompletionHandlerBase {
     indicator.showLookup();
   }
 
-  private @Nullable Deferred<?> startContributorThread(CompletionInitializationContextImpl initContext,
-                                                       CompletionProgressIndicator indicator,
-                                                       OffsetsInFile hostCopyOffsets,
+  private @Nullable Deferred<?> startContributorThread(@NotNull CompletionInitializationContextImpl initContext,
+                                                       @NotNull CompletionProgressIndicator indicator,
+                                                       @NotNull OffsetsInFile hostCopyOffsets,
                                                        boolean hasModifiers) {
     if (!hostCopyOffsets.getFile().isValid()) {
       completionFinished(indicator, hasModifiers);
@@ -377,6 +394,7 @@ public class CodeCompletionHandlerBase {
 
     ApplicationManager.getApplication().getMessageBus().syncPublisher(CompletionContributorListener.TOPIC)
       .beforeCompletionContributorThreadStarted(indicator, initContext);
+
     return indicator.getCompletionThreading()
       .startThread(indicator, Context.current().wrap(() -> {
         CompletionThreadingKt.tryReadOrCancel(indicator, Context.current().wrap(() -> {
@@ -384,7 +402,7 @@ public class CodeCompletionHandlerBase {
           indicator.registerChildDisposable(finalOffsets::getOffsets);
 
           CompletionParameters parameters = CompletionInitializationUtil.createCompletionParameters(initContext, indicator, finalOffsets);
-          parameters.setIsTestingMode(isTestingMode());
+          parameters.setTestingMode(isTestingMode());
           indicator.setParameters(parameters);
 
           indicator.runContributors(initContext);
@@ -392,22 +410,22 @@ public class CodeCompletionHandlerBase {
       }));
   }
 
-  private static void checkNotSync(CompletionProgressIndicator indicator, List<LookupElement> allItems) {
+  private static void checkNotSync(@NotNull CompletionProgressIndicator indicator, @NotNull List<LookupElement> allItems) {
     if (CompletionServiceImpl.isPhase(CompletionPhase.Synchronous.class)) {
       LOG.error("sync phase survived: " + allItems + "; indicator=" + CompletionServiceImpl.getCompletionPhase().indicator + "; myIndicator=" + indicator);
       CompletionServiceImpl.setCompletionPhase(CompletionPhase.NoCompletion);
     }
   }
 
-  private AutoCompletionDecision shouldAutoComplete(@NotNull CompletionProgressIndicator indicator,
-                                                    @NotNull List<? extends LookupElement> items,
-                                                    @NotNull CompletionParameters parameters) {
+  private @NotNull AutoCompletionDecision shouldAutoComplete(@NotNull CompletionProgressIndicator indicator,
+                                                             @NotNull List<? extends LookupElement> items,
+                                                             @NotNull CompletionParameters parameters) {
     if (!invokedExplicitly) {
       return AutoCompletionDecision.SHOW_LOOKUP;
     }
-    final LookupElement item = items.get(0);
+    LookupElement item = items.getFirst();
     if (items.size() == 1) {
-      final AutoCompletionPolicy policy = getAutocompletionPolicy(item);
+      AutoCompletionPolicy policy = getAutocompletionPolicy(item);
       if (policy == AutoCompletionPolicy.NEVER_AUTOCOMPLETE) return AutoCompletionDecision.SHOW_LOOKUP;
       if (policy == AutoCompletionPolicy.ALWAYS_AUTOCOMPLETE) return AutoCompletionDecision.insertItem(item);
       if (!indicator.getLookup().itemMatcher(item).isStartMatch(item)) return AutoCompletionDecision.SHOW_LOOKUP;
@@ -425,7 +443,7 @@ public class CodeCompletionHandlerBase {
     AutoCompletionContext context =
       new AutoCompletionContext(parameters, items.toArray(LookupElement.EMPTY_ARRAY), indicator.getOffsetMap(), indicator.getLookup());
     AutoCompletionDecision resultingDecision = DumbModeAccessType.RELIABLE_DATA_ONLY.ignoreDumbMode(() -> {
-      for (final CompletionContributor contributor : CompletionContributor.forParameters(parameters)) {
+      for (CompletionContributor contributor : CompletionContributor.forParameters(parameters)) {
         AutoCompletionDecision decision = contributor.handleAutoCompletionPossibility(context);
         if (decision != null) {
           return decision;
@@ -441,15 +459,16 @@ public class CodeCompletionHandlerBase {
     return AutoCompletionDecision.SHOW_LOOKUP;
   }
 
-  private static @Nullable AutoCompletionPolicy getAutocompletionPolicy(LookupElement element) {
+  private static @Nullable AutoCompletionPolicy getAutocompletionPolicy(@NotNull LookupElement element) {
     return element.getAutoCompletionPolicy();
   }
 
-  private static boolean isInsideIdentifier(final OffsetMap offsetMap) {
-    return offsetMap.getOffset(CompletionInitializationContext.IDENTIFIER_END_OFFSET) != offsetMap.getOffset(CompletionInitializationContext.SELECTION_END_OFFSET);
+  private static boolean isInsideIdentifier(@NotNull OffsetMap offsetMap) {
+    return offsetMap.getOffset(CompletionInitializationContext.IDENTIFIER_END_OFFSET) !=
+           offsetMap.getOffset(CompletionInitializationContext.SELECTION_END_OFFSET);
   }
 
-  protected void completionFinished(final CompletionProgressIndicator indicator, boolean hasModifiers) {
+  protected void completionFinished(@NotNull CompletionProgressIndicator indicator, boolean hasModifiers) {
     List<LookupElement> items = indicator.getLookup().getItems();
     if (items.isEmpty()) {
       LookupManager.hideActiveLookup(indicator.getProject());
@@ -477,9 +496,9 @@ public class CodeCompletionHandlerBase {
         CompletionServiceImpl.setCompletionPhase(new CompletionPhase.ItemsCalculated(indicator));
       }
       else if (decision instanceof AutoCompletionDecision.InsertItem) {
-        final Runnable restorePrefix = rememberDocumentState(indicator.getEditor());
+        Runnable restorePrefix = rememberDocumentState(indicator.getEditor());
 
-        final LookupElement item = ((AutoCompletionDecision.InsertItem)decision).getElement();
+        LookupElement item = ((AutoCompletionDecision.InsertItem)decision).getElement();
         CommandProcessor.getInstance().executeCommand(indicator.getProject(), () -> {
           indicator.setMergeCommand();
           indicator.getLookup().finishLookup(Lookup.AUTO_INSERT_SELECT_CHAR, item);
@@ -489,9 +508,10 @@ public class CodeCompletionHandlerBase {
         if (CompletionService.getCompletionService().getCurrentCompletion() == null &&
             // ...or scheduled another autopopup
             !CompletionServiceImpl.isPhase(CompletionPhase.CommittingDocuments.class)) {
-          CompletionServiceImpl.setCompletionPhase(hasModifiers? new CompletionPhase.InsertedSingleItem(indicator, restorePrefix) : CompletionPhase.NoCompletion);
+          CompletionServiceImpl.setCompletionPhase(hasModifiers ? new CompletionPhase.InsertedSingleItem(indicator, restorePrefix) : CompletionPhase.NoCompletion);
         }
-      } else if (decision == AutoCompletionDecision.CLOSE_LOOKUP) {
+      }
+      else if (decision == AutoCompletionDecision.CLOSE_LOOKUP) {
         LookupManager.hideActiveLookup(indicator.getProject());
       }
     }
@@ -504,8 +524,10 @@ public class CodeCompletionHandlerBase {
     }
   }
 
-  protected void lookupItemSelected(final CompletionProgressIndicator indicator, final @NotNull LookupElement item, final char completionChar,
-                                    final List<LookupElement> items) {
+  protected void lookupItemSelected(@NotNull CompletionProgressIndicator indicator,
+                                    @NotNull LookupElement item,
+                                    char completionChar,
+                                    @NotNull List<LookupElement> items) {
     WatchingInsertionContext context = null;
     try {
       StatisticsUpdate update = StatisticsUpdate.collectStatisticChanges(item);
@@ -522,22 +544,20 @@ public class CodeCompletionHandlerBase {
     }
   }
 
-  static WatchingInsertionContext insertItemHonorBlockSelection(List<LookupElement> itemsAround,
-                                                                LookupElement item,
-                                                                char completionChar,
-                                                                OffsetMap offsetMap,
-                                                                OffsetsInFile hostOffset,
-                                                                Editor editor,
-                                                                Integer caretOffset,
-                                                                StatisticsUpdate update) {
+  static @NotNull WatchingInsertionContext insertItemHonorBlockSelection(@NotNull List<LookupElement> itemsAround,
+                                                                         @NotNull LookupElement item,
+                                                                         char completionChar,
+                                                                         @NotNull OffsetMap offsetMap,
+                                                                         @NotNull OffsetsInFile hostOffset,
+                                                                         @NotNull Editor editor,
+                                                                         int caretOffset) {
 
-    final int idEndOffset = CompletionUtil.calcIdEndOffset(offsetMap, editor, caretOffset);
-    final int idEndOffsetDelta = idEndOffset - caretOffset;
+    int idEndOffset = CompletionUtil.calcIdEndOffset(offsetMap, editor, caretOffset);
+    int idEndOffsetDelta = idEndOffset - caretOffset;
 
     WatchingInsertionContext context = doInsertItem(hostOffset,
                                                     item,
                                                     completionChar,
-                                                    update,
                                                     editor,
                                                     Objects.requireNonNull(editor.getProject()),
                                                     caretOffset,
@@ -553,31 +573,32 @@ public class CodeCompletionHandlerBase {
     return context;
   }
 
-  private static WatchingInsertionContext insertItemHonorBlockSelection(CompletionProcessEx indicator,
-                                                                        LookupElement item,
-                                                                        char completionChar,
-                                                                        StatisticsUpdate update) {
-    final Editor editor = indicator.getEditor();
+  private static @NotNull WatchingInsertionContext insertItemHonorBlockSelection(@NotNull CompletionProcessEx indicator,
+                                                                                 @NotNull LookupElement item,
+                                                                                 char completionChar,
+                                                                                 @NotNull StatisticsUpdate update) {
+    Editor editor = indicator.getEditor();
     int caretOffset = indicator.getCaret().getOffset();
     OffsetMap offsetMap = indicator.getOffsetMap();
 
     Lookup lookup = indicator.getLookup();
     List<LookupElement> items = lookup != null ? lookup.getItems() : Collections.emptyList();
 
-    final int idEndOffset = CompletionUtil.calcIdEndOffset(offsetMap, editor, caretOffset);
-    final int idEndOffsetDelta = idEndOffset - caretOffset;
+    int idEndOffset = CompletionUtil.calcIdEndOffset(offsetMap, editor, caretOffset);
+    int idEndOffsetDelta = idEndOffset - caretOffset;
 
-    WatchingInsertionContext context = doInsertItem(indicator.getHostOffsets(),
+    WatchingInsertionContext context = doInsertItem(
+      indicator.getHostOffsets(),
       item,
       completionChar,
-      update,
       editor,
       indicator.getProject(),
       caretOffset,
       offsetMap,
       items,
       idEndOffset,
-      idEndOffsetDelta);
+      idEndOffsetDelta
+    );
 
     if (lookup != null) {
       update.addSparedChars(lookup, item, context);
@@ -591,17 +612,16 @@ public class CodeCompletionHandlerBase {
     return context;
   }
 
-  private static WatchingInsertionContext doInsertItem(@NotNull OffsetsInFile topLevelOffsets,
-                                                       LookupElement item,
-                                                       char completionChar,
-                                                       StatisticsUpdate update,
-                                                       @NotNull Editor editor,
-                                                       @NotNull Project project,
-                                                       int caretOffset,
-                                                       OffsetMap offsetMap,
-                                                       List<LookupElement> items,
-                                                       int idEndOffset,
-                                                       int idEndOffsetDelta) {
+  private static @NotNull WatchingInsertionContext doInsertItem(@NotNull OffsetsInFile topLevelOffsets,
+                                                                @NotNull LookupElement item,
+                                                                char completionChar,
+                                                                @NotNull Editor editor,
+                                                                @NotNull Project project,
+                                                                int caretOffset,
+                                                                @NotNull OffsetMap offsetMap,
+                                                                @Nullable List<LookupElement> items,
+                                                                int idEndOffset,
+                                                                int idEndOffsetDelta) {
     WatchingInsertionContext context;
     if (editor.getCaretModel().supportsMultipleCarets()) {
       Ref<WatchingInsertionContext> lastContext = Ref.create();
@@ -609,33 +629,24 @@ public class CodeCompletionHandlerBase {
       boolean wasInjected = hostEditor != editor;
       PsiDocumentManager.getInstance(project).commitDocument(hostEditor.getDocument());
       hostEditor.getCaretModel().runForEachCaret(caret -> {
-        OffsetsInFile targetOffsets;
-        if (!wasInjected) {
-          targetOffsets = topLevelOffsets;
-        }
-        else {
-          targetOffsets = topLevelOffsets.toInjectedIfAny(caret.getOffset());
-        }
-        doInsertItemForSingleCaret(item, completionChar, update, items, idEndOffsetDelta, lastContext, hostEditor, targetOffsets);
+        OffsetsInFile targetOffsets = wasInjected ? topLevelOffsets.toInjectedIfAny(caret.getOffset()) : topLevelOffsets;
+        lastContext.set(doInsertItemForSingleCaret(item, completionChar, items, idEndOffsetDelta, hostEditor, targetOffsets));
       });
       context = lastContext.get();
     }
     else {
       PsiFile psiFile = PsiUtilBase.getPsiFileInEditor(editor, project);
-      context = insertItem(items, item, completionChar, update, editor, psiFile, caretOffset,
-        idEndOffset, offsetMap);
+      context = insertItem(items, item, completionChar, editor, psiFile, caretOffset, idEndOffset, offsetMap);
     }
     return context;
   }
 
-  private static void doInsertItemForSingleCaret(LookupElement item,
-                                                 char completionChar,
-                                                 StatisticsUpdate update,
-                                                 List<LookupElement> items,
-                                                 int idEndOffsetDelta,
-                                                 Ref<WatchingInsertionContext> lastContext,
-                                                 Editor hostEditor,
-                                                 OffsetsInFile targetOffsets) {
+  private static @NotNull WatchingInsertionContext doInsertItemForSingleCaret(@NotNull LookupElement item,
+                                                                              char completionChar,
+                                                                              @Nullable List<LookupElement> items,
+                                                                              int idEndOffsetDelta,
+                                                                              @NotNull Editor hostEditor,
+                                                                              @NotNull OffsetsInFile targetOffsets) {
     PsiFile targetFile = targetOffsets.getFile();
     Editor targetEditor = InjectedLanguageUtil.getInjectedEditorForInjectedFile(hostEditor, targetFile);
     int targetCaretOffset = targetEditor.getCaretModel().getOffset();
@@ -644,14 +655,14 @@ public class CodeCompletionHandlerBase {
       idEnd = targetCaretOffset; // no replacement by Tab when offsets gone wrong for some reason
     }
 
-    WatchingInsertionContext currentContext = insertItem(items, item, completionChar, update,
+    WatchingInsertionContext currentContext = insertItem(items, item, completionChar,
                                                          targetEditor, targetFile,
                                                          targetCaretOffset, idEnd,
                                                          targetOffsets.getOffsets());
-    lastContext.set(currentContext);
+    return currentContext;
   }
 
-  private static void checkPsiTextConsistency(CompletionProcessEx indicator) {
+  private static void checkPsiTextConsistency(@NotNull CompletionProcessEx indicator) {
     PsiFile psiFile = PsiUtilBase.getPsiFileInEditor(InjectedLanguageEditorUtil.getTopLevelEditor(indicator.getEditor()), indicator.getProject());
     if (psiFile != null) {
       if (Registry.is("ide.check.stub.text.consistency") ||
@@ -665,7 +676,7 @@ public class CodeCompletionHandlerBase {
     }
   }
 
-  public void afterItemInsertion(final CompletionProgressIndicator indicator, final Runnable laterRunnable) {
+  public void afterItemInsertion(@NotNull CompletionProgressIndicator indicator, @Nullable Runnable laterRunnable) {
     if (laterRunnable != null) {
       ActionTracker tracker = new ActionTracker(indicator.getEditor(), indicator);
       Runnable wrapper = () -> {
@@ -686,15 +697,14 @@ public class CodeCompletionHandlerBase {
     }
   }
 
-  private static WatchingInsertionContext insertItem(final List<LookupElement> lookupItems,
-                                                     final LookupElement item,
-                                                     final char completionChar,
-                                                     final StatisticsUpdate update,
-                                                     final Editor editor,
-                                                     final PsiFile psiFile,
-                                                     final int caretOffset,
-                                                     final int idEndOffset,
-                                                     final OffsetMap offsetMap) {
+  private static @NotNull WatchingInsertionContext insertItem(@Nullable List<LookupElement> lookupItems,
+                                                              @NotNull LookupElement item,
+                                                              char completionChar,
+                                                              @NotNull Editor editor,
+                                                              @NotNull PsiFile psiFile,
+                                                              int caretOffset,
+                                                              int idEndOffset,
+                                                              @NotNull OffsetMap offsetMap) {
     editor.getCaretModel().moveToOffset(caretOffset);
 
     WatchingInsertionContext context =
@@ -725,17 +735,19 @@ public class CodeCompletionHandlerBase {
         context.stopWatching();
       }
 
-      EditorModificationUtil.scrollToCaret(editor);
+      EditorModificationUtilEx.scrollToCaret(editor);
     });
 
     return context;
   }
 
-  private static WatchingInsertionContext callHandleInsert(CompletionProgressIndicator indicator, LookupElement item, char completionChar) {
-    final Editor editor = indicator.getEditor();
+  private static @NotNull WatchingInsertionContext callHandleInsert(@NotNull CompletionProgressIndicator indicator,
+                                                                    @NotNull LookupElement item,
+                                                                    char completionChar) {
+    Editor editor = indicator.getEditor();
 
-    final int caretOffset = indicator.getCaret().getOffset();
-    final int idEndOffset = CompletionUtil.calcIdEndOffset(indicator.getOffsetMap(), editor, indicator.getCaret().getOffset());
+    int caretOffset = indicator.getCaret().getOffset();
+    int idEndOffset = CompletionUtil.calcIdEndOffset(indicator.getOffsetMap(), editor, indicator.getCaret().getOffset());
     PsiFile psiFile = PsiUtilBase.getPsiFileInEditor(editor, indicator.getProject());
 
     WatchingInsertionContext context = CompletionUtil.createInsertionContext(indicator.getLookup().getItems(), item, completionChar, editor, psiFile,
@@ -749,7 +761,7 @@ public class CodeCompletionHandlerBase {
     return context;
   }
 
-  public static void addCompletionChar(InsertionContext context, LookupElement item) {
+  public static void addCompletionChar(@NotNull InsertionContext context, @NotNull LookupElement item) {
     if (!context.getOffsetMap().containsOffset(InsertionContext.TAIL_OFFSET)) {
       @NonNls String message = "tailOffset<0 after inserting " + item + " of " + item.getClass();
       if (context instanceof WatchingInsertionContext) {
@@ -778,26 +790,26 @@ public class CodeCompletionHandlerBase {
     }
   }
 
-  private static boolean isAutocompleteOnInvocation(final CompletionType type) {
-    final CodeInsightSettings settings = CodeInsightSettings.getInstance();
+  private static boolean isAutocompleteOnInvocation(@NotNull CompletionType type) {
+    CodeInsightSettings settings = CodeInsightSettings.getInstance();
     if (type == CompletionType.SMART) {
       return settings.AUTOCOMPLETE_ON_SMART_TYPE_COMPLETION;
     }
     return settings.AUTOCOMPLETE_ON_CODE_COMPLETION;
   }
 
-  private static Runnable rememberDocumentState(final Editor _editor) {
-    final Editor editor = InjectedLanguageEditorUtil.getTopLevelEditor(_editor);
-    final String documentText = editor.getDocument().getText();
-    final int caret = editor.getCaretModel().getOffset();
-    final int selStart = editor.getSelectionModel().getSelectionStart();
-    final int selEnd = editor.getSelectionModel().getSelectionEnd();
+  private static @NotNull Runnable rememberDocumentState(@NotNull Editor _editor) {
+    Editor editor = InjectedLanguageEditorUtil.getTopLevelEditor(_editor);
+    String documentText = editor.getDocument().getText();
+    int caret = editor.getCaretModel().getOffset();
+    int selStart = editor.getSelectionModel().getSelectionStart();
+    int selEnd = editor.getSelectionModel().getSelectionEnd();
 
-    final int vOffset = editor.getScrollingModel().getVerticalScrollOffset();
-    final int hOffset = editor.getScrollingModel().getHorizontalScrollOffset();
+    int vOffset = editor.getScrollingModel().getVerticalScrollOffset();
+    int hOffset = editor.getScrollingModel().getHorizontalScrollOffset();
 
     return () -> {
-      DocumentEx document = (DocumentEx) editor.getDocument();
+      DocumentEx document = (DocumentEx)editor.getDocument();
 
       document.replaceString(0, document.getTextLength(), documentText);
       editor.getCaretModel().moveToOffset(caret);
@@ -820,7 +832,7 @@ public class CodeCompletionHandlerBase {
     caret.putUserData(CARET_PROCESSED, Boolean.TRUE);
   }
 
-  private static Caret getNextCaretToProcess(@NotNull Editor editor) {
+  private static @Nullable Caret getNextCaretToProcess(@NotNull Editor editor) {
     for (Caret caret : editor.getCaretModel().getAllCarets()) {
       if (caret.getUserData(CARET_PROCESSED) == null) {
         return caret;
